tests/compile-fail/integration__integration__enums__undefined_enum__suggestion.snap
---
source: tests/integration/enums.rs
expression: stderr
---
error: no such enum 'TesEnum'
  ┌─ <mapfile-1>:3:5
  │
3 │ 400 S(enum="TesEnum")
  │     ^^^^^^^^^^^^^^^^^
  │     │
  │     no such enum
  │     did you mean `TestEnum`?


